# store-structs

./: CMakeLists.txt  LICENSE
sstruct/: main.cpp  sstruct.hpp  tests.cpp
